--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: filed
-main: com.example.filed.DownloadPlugin
+main: com.example.filed.FiledPlugin
 version: 1.0
 api-version: 1.21
 description: Plugin to download files from URLs listed in link.txt
