--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,5 @@
-# Interval pembacaan ulang file link.txt (dalam detik)
-read-interval: 60
-
-# Lokasi folder tujuan penyimpanan file yang diunduh
-download-folder: plugins/filed/downloads
-
 # Kecepatan download dalam Mbps (maksimal 5 Mbps)
 download-speed: 1
+
+# Waktu dalam detik untuk menunggu sebelum membaca link.txt lagi
+read-delay-seconds: 10
