--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,11 @@
 name: Filed
-version: 1.0
 main: com.example.filed.FiledPlugin
-api-version: 1.21
+version: 1.3
+description: Plugin untuk mengunduh file dari internet ke server Minecraft
+
 commands:
   filed:
-    description: Menyediakan perintah download dan reload
-    usage: /filed <download|reload|setfolder|setspeed>
+    description: Mengelola unduhan file
+    usage: /filed <command>
+    aliases:
+      - filed
