--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,8 +25,8 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4
+    #- name: Setup Gradle
+    #  uses: gradle/actions/setup-gradle@v4
 
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
